string enum values instead of int
